Twitter stream arranged in desc order, horizontal scrolling issues

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -43,8 +43,8 @@ p * {
 }
 
 .thumbnails {
-    width: 100%;
-    height: 85px;
+
+    height: 150px;
 }
 
 .btn {
