--- a/client/css/twitter.css
+++ b/client/css/twitter.css
@@ -58,6 +58,29 @@ p *{
     padding-right:3px ;
 }
 
+.DocumentList
+{
+    overflow-x:scroll;
+    overflow-y:hidden;
+    height:250px;
+
+    padding: 0 15px;
+    position: fixed;
+    width: 57%;
+}
+
+.DocumentItem
+{
+    /*border:1px solid black;*/
+    padding:0;
+    height:250px;
+}
+
+.list-inline {
+    white-space:nowrap;
+}
+
+
 /*
 .row-fluid{
     white-space: nowrap;
